# ChildLanguageAcquisition-RAG

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
childlanguagenet/config/: config.py
childlanguagenet/document_ingestion/: document_processor.py
childlanguagenet/graph_builder/: graph_builder.py
childlanguagenet/node/: rag_nodes.py  react_node.py
childlanguagenet/state/: rag_state.py
childlanguagenet/vectorstore/: vectorstore.py
data/: metadata.json
data/index/faiss/: index.pkl
