[project]
name = "childlanguageacquisition-rag"
version = "0.1.0"
description = "RAG-based document search and Q&A for child language acquisition research literature."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "faiss-cpu>=1.13.1",
    "ipykernel>=7.1.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.2",
    "langchain-openai>=1.1.4",
    "langgraph>=1.0.5",
    "openai>=2.13.0",
    "pydantic>=2.12.5",
    "pypdf>=6.4.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.52.1",
    "wikipedia>=1.4.0",
]
